@@ -7,6 +7,7 @@ Version 0.4.3
    * Remove: --title support
      # No longer supported by cclive as of 0.5.0
    * Start DL if new link is added after hitting "start dl" on empty list
+   * Show LANG locale setting in about dialog
    * Fix: filename not shown when download starts
    * Fix: typo in statustip "scan for video links"
    * Fix: filename parsing when it contains whitespace
